--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -914,7 +914,7 @@
         switch (newState) {
           case 'idle':
             instructionText.textContent =
-              'Click to start listening, click again to stop • Cmd+Space works too'
+              'Click to start listening, click again to stop'
             break
 
           case 'listening':
